[package]
name = "rust_crypto_aes_benchmarks"
version = "0.0.0"
edition = "2021"
authors = ["Schmid7k"]
license = "Apache-2.0"
repository = "https://github.com/Schmid7k/RustCrypto-AES-Benchmarks"
description = "Benchmarks of RustCrypto's AES module with focus on different block modes by making use of criterion and its cycles-per-byte plugin"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"
aes = "0.8.1"
generic-array = "0.14.5"
cbc = "0.1.2"
ctr = "0.9.1"
aes-gcm = { version = "0.10.1", features = ["heapless"] }
deoxys = "0.1.0"
rand = "0.8.5"

[profile.bench]
#opt-level = 3
#codegen-units = 1
#debug = false
#debug-assertions = false
#lto = "fat"
#rpath = false
incremental = false

[[bench]]
name = "aes-ecb"
path = "src/aes_ecb.rs"
harness = false

[[bench]]
name = "aes-cbc"
path = "src/aes_cbc.rs"
harness = false

[[bench]]
name = "aes-ctr"
path = "src/aes_ctr.rs"
harness = false

[[bench]]
name = "aes-gcm"
path = "src/aes_gcm.rs"
harness = false

[[bench]]
name = "deoxys"
path = "src/deoxys.rs"
harness = false
